NIFI-11259 - PR feedback - strings to constants - Kafka3ConnectionService.TRANSACTION_ISOLATION_LEVEL - checkstyle issues - conform to project standard MD format - sensible renames of component properties (use Kafka names where appropriate) - update kafka docker image used for integration tests - optimize POMs to account for nifi-bom - refactor log statements (remove) - refactor development comments (remove) - refactor PropertyDescriptor descriptions (HTML interoperability) - NiFi component annotations (DynamicProperty, CapabilityDescription, Tags, WritesAttributes, SeeAlso) - notes for followup issues - dependency updates - rename jacoco module to nifi-kafka-code-coverage - additional messaging on runtime exceptions